@@ -90,6 +90,8 @@ DYLIB_DEPS	= @DYLIB_DEPS@
 
 VPR_LIB_STATIC		= $(VPR_LIBRARY).$(STATICLIB_EXT)
 VPR_LIB_DYNAMIC		= $(VPR_LIBRARY).$(DYNAMICLIB_EXT)
+VPR_PROF_LIB_STATIC	= $(VPR_LIBRARY)$(PROFLIB_EXT).$(STATICLIB_EXT)
+VPR_PROF_LIB_DYNAMIC	= $(VPR_LIBRARY)$(PROFLIB_EXT).$(DYNAMICLIB_EXT)
 
 # Version information.
 BRANCH		= HEAD
@@ -119,7 +121,7 @@ afterbuild:
 # -----------------------------------------------
 # Construct the static version of the libraries.
 # -----------------------------------------------
-$(LIBDIR)/$(VPR_LIB_STATIC): $(OBJDIR)/*.$(OBJEXT)
+$(LIBDIR)/$(VPR_LIB_STATIC) $(LIBDIR)/$(VPR_PROF_LIB_STATIC): $(OBJDIR)/*.$(OBJEXT)
 ifneq (@OS_TYPE@, Win32)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
@@ -136,7 +138,7 @@ endif
 # ------------------------------------------------
 # Construct the dynamic version of the libraries.
 # ------------------------------------------------
-$(LIBDIR)/$(VPR_LIB_DYNAMIC): $(OBJDIR)/*.$(OBJEXT)
+$(LIBDIR)/$(VPR_LIB_DYNAMIC) $(LIBDIR)/$(VPR_PROF_LIB_DYNAMIC): $(OBJDIR)/*.$(OBJEXT)
 	@echo "------------------------------------------------"
 	@echo "Creating $@"
 	@echo "------------------------------------------------"
